<resources>
    <string name="app_name">AniWorld</string>
    <string name="App_name">AniWorld</string>
    <string name="text">Welcome to COTE`s Team</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">sign up</string>
    <string name="login_screen">Login Screen</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit_button">Submit</string>
    <string name="Sign_up">Sign up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone Number</string>
    <string name="email">Email</string>
    <string name="submit_but">Submit</string>
    <string name="Full_Name">User Name : </string>
    <string name="Mail">E_mail :  </string>
    <string name="ownerName">S.S.V.Raghava</string>
    <string name="ceo">Creator</string>
    <string name="profileHeading">Creator`s PROFILE</string>
    <string name="quote">Where technology meets creativity: building the future of anime engagement !!</string>
    <string name="logout">Logout</string>
    <string name="headProfile">Creator`s Profile</string>
    <string name="myprofile">My Profile</string>
    <string name="mob">Phone No: </string>
    <string name="country">Country : </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="behaviour">BEHAVIOR_RESUME_ONLY_CURRENT_FRAGMENT </string>


</resources>
