<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item
        android:id="@+id/Call"
        android:title="Call"
        android:icon="@drawable/mobile"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/Char"
        android:title="Cast"
        android:icon="@drawable/logo_chars"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/myProfile"
        android:title="@string/myprofile"
        android:icon="@drawable/my_pro"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/Friend_list"
        android:title="Chat"
        android:icon="@drawable/friends"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/head_profile"
        android:title="@string/headProfile"
        android:icon="@drawable/head_pro"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/log_out"
        android:title="@string/logout"
        android:icon="@drawable/logout"
        app:showAsAction="ifRoom"
        />
</menu>