<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/ActionColor"
    android:padding="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.cardview.widget.CardView
        android:id="@+id/CL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:cardElevation="50sp"
        app:cardCornerRadius="20dp"
        android:layout_marginTop="0dp"
        android:layout_centerInParent="true"
        >
        <RelativeLayout
            android:id="@+id/RL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/green"
            >


            <TextView
                android:id="@+id/SignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Sign_up"
                android:textColor="@color/teal_200"
                android:textSize="40sp"
                android:textStyle="bold" />

    <EditText
        android:id="@+id/fname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SignUp"
        android:layout_marginTop="20dp"
        android:hint="@string/first_name" />

    <EditText
        android:id="@+id/lname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fname"
        android:layout_marginTop="20dp"
        android:hint="@string/last_name" />

    <EditText
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lname"
        android:layout_marginTop="20dp"
        android:hint="User Name" />

    <EditText
        android:id="@+id/numb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rg"
        android:layout_marginTop="0dp"
        android:hint="@string/phone"
        android:inputType="number" />

    <EditText
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numb"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mail"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        />

    <TextView
        android:id="@+id/spinh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pass"
        android:layout_marginTop="10dp"
        android:text="country"
        android:textColor="#2581B8"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinh"
        android:layout_marginTop="10dp"
 />

    <Button
        android:id="@+id/sub_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/submit_but" />

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user"
        android:layout_marginTop="-1dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/fem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Female" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/mal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Male" />

    </RadioGroup>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>