<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#75FA929A"
    >

    <TextView
        android:layout_width="265dp"
        android:layout_height="51dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="47dp"
        android:gravity="center"
        android:text="@string/profileHeading"
        android:textColor="@color/purple_700"
        android:textSize="28dp"
        android:textStyle="bold" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image"
        android:layout_width="204dp"
        android:layout_height="191dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="106dp"
        android:src="@drawable/pr" />

    <TextView
        android:id="@+id/head_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/ownerName"
        android:textColor="#03A9F4"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/head_name"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/ceo"
        android:textColor="#3F51B5"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/post"
        android:layout_marginTop="39dp"
        android:gravity="center"
        android:text="@string/quote"
        android:textColor="@color/red"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Back_icon"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="3dp"
        android:drawableLeft="@drawable/back_icon"
        app:backgroundTint="#00DFE3DD" />

</RelativeLayout>