<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E4B4B4"
    >

    <TextView
        android:layout_width="288dp"
        android:layout_height="94dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"

        android:layout_marginStart="81dp"
        android:layout_marginTop="2dp"
        android:text="@string/profileHeading"
        android:textColor="@color/purple_700"
        android:textSize="35sp"
        android:textStyle="bold" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image"
        android:layout_width="204dp"
        android:layout_height="191dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="105dp"
        android:layout_marginTop="106dp"
        android:layout_marginEnd="101dp"
        android:src="@drawable/pr" />

    <TextView
        android:id="@+id/na"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/image"
        android:layout_marginTop="10dp"
        android:text="@string/ownerName"
        android:textColor="#03A9F4"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/he"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@id/na"
        android:text="@string/ceo"
        android:textColor="#3F51B5"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="311dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/he"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/quote"
        android:textColor="@color/red"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Back_icon"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="3dp"
        android:drawableStart="@drawable/back_icon"
        app:backgroundTint="#00DFE3DD" />

</RelativeLayout>